el resto de swagger docs y un par de validaciones
